--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,27 @@
 <resources>
     <string name="app_name">SMS Forwarder</string>
+    <!-- Stringhe esistenti -->
     <string name="clear_logs">Clear Logs</string>
     <string name="view_logs">View Logs</string>
     <string name="start_service">Start Service</string>
     <string name="stop_service">Stop Service</string>
+
+    <!-- Nuove stringhe -->
+    <string name="email_hint">Email</string>
+    <string name="password_hint">Password</string>
+    <string name="recipient_email_hint">Recipient Email</string>
+    <string name="subject_format_hint">Subject Format</string>
+    <string name="body_format_hint">Body Format</string>
+    <string name="save_settings">Save Settings</string>
+    <string name="back">Back</string>
+    <string name="sms_permission_not_granted">SMS Permission: Not Granted</string>
+    <string name="notification_permission_not_granted">Notification Permission: Not Granted</string>
+    <string name="settings">Settings</string>
+    <string name="sms_forwarding_logs">SMS Forwarding Logs</string>
+    <string name="clear_all_logs">Clear all logs</string>
+    <string name="resend">Resend</string>
+    <string name="sms_permission_status">SMS Permission: %1$s</string>
+    <string name="notification_permission_status">Notification Permission: %1$s</string>
+    <string name="sms_from_sender">SMS from {sender}</string>
+    <string name="default_body_format">From: {sender}\nTime: {time}\n\n{body}</string>
 </resources>
